--- a/Media.css
+++ b/Media.css
@@ -1,6 +1,6 @@
 /* Media */
 
-@media (max-width: 410px) 
+@media (max-width: 411px) 
 
 
 {   
@@ -73,6 +73,7 @@ margin: 10px;
 display: flex;
 flex-direction: column;
 align-items: center;
+margin-bottom: 40px;
     }
 
 
@@ -99,7 +100,7 @@ grid-template-rows: 1fr 55px;
       grid-column: 1/-1;
       
       margin-bottom: 10px;
-       margin-inline-end: auto;
+      
 margin-left: 26px;
     }
 
@@ -113,6 +114,7 @@ height: 144px;
     display: flex;
     margin-top: 2rem;
     flex-wrap: wrap;
+    padding-left: 10px;
 }
 
 .searchFiltersTitle {
@@ -217,13 +219,24 @@ overflow: auto;
     flex-wrap: wrap;
 }
 
+.Inscription {
+
+padding-right: 5vw;
+    grid-area: 1 / 2 / 2 / 3;
+    justify-self: end;
+}
 
 .header {
-    grid-template-columns: auto 1fr auto;
-grid-template-areas: "logo . button" "navbar navbar navbar";
 
+
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+display: grid;
+align-items: center;
+justify-content: center;
 
 }
+
 
 .headerNav {
 
@@ -234,16 +247,6 @@ grid-template-areas: "logo . button" "navbar navbar navbar";
 }
 
 
-.Inscription {
-    grid-area: initial;
-    font-weight: 600;
-    text-decoration: none;
-    font-size: 17px;
-    font-family: 'Raleway', sans-serif;
-    color: #0065FC;
-    margin: auto;
-    order: 1;
-}
 
 #entete {
     margin: 30px 0px 0px 15px;
@@ -253,11 +256,23 @@ grid-template-areas: "logo . button" "navbar navbar navbar";
 
 .Lien {
     color: #0065FC;
-    border-bottom: 3px solid #0065FC;
+    border-bottom: 3px solid #F2F2F2 ;
     border-top: inherit;
 }
+
+.Lien:hover {
+    border-bottom: 3px solid #0065FC;
+color: #0065FC;
+    }
+    
+.Lien2 {
+
+border-bottom: 3px solid #F2F2F2 ;
+    border-top: inherit;
+}
+
 .Lien2:hover {
-    border-bottom: 3px solid #D9DBDE;
+    border-bottom: 3px solid #0065FC;
 color: #0065FC;
     }
 
@@ -290,7 +305,24 @@ color: #0065FC;
 background-color: #F6FAFF;
 
 }
+.box:hover {
 
+    transform: scale(1.02);
+transition-duration: 0.2s;
+}
+
+     .Populaire__header{  
+display: grid;
+grid-template-columns: 1fr 1.25rem;
+margin-bottom: 0rem;
+ }
+
+
+i.fas.fa-chart-line {
+
+    padding-right: 2rem;
+    color: black;
+} 
 }
 
 
@@ -365,6 +397,7 @@ margin: 10px;
 display: flex;
 flex-direction: column;
 align-items: center;
+margin-bottom: 40px;
     }
 
 
@@ -391,7 +424,7 @@ grid-template-rows: 1fr 55px;
       grid-column: 1/-1;
       
       margin-bottom: 10px;
-       margin-inline-end: auto;
+       
 margin-left: 26px;
     }
 
@@ -405,6 +438,9 @@ height: 144px;
     display: flex;
     margin-top: 2rem;
     flex-wrap: wrap;
+    padding-left: 10px;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .searchFiltersTitle {
@@ -506,28 +542,47 @@ overflow: auto;
 }
 
 
-.header {
-grid-template-columns: auto 1fr auto;
-grid-template-areas: "logo . button" "navbar-start navbar-end navbar-end";
+.Inscription {
 
+padding-right: 5vw;
+    grid-area: 1 / 2 / 2 / 3;
+    justify-self: end;
+}
+
+.header {
+
+
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+display: grid;
+align-items: center;
+justify-content: center;
 
 }
 
 
-.Inscription {
-    grid-area: initial;
-    font-weight: 600;
-    text-decoration: none;
-    font-size: 17px;
-    font-family: 'Raleway', sans-serif;
+.Lien {
     color: #0065FC;
-    margin: auto;
+    border-bottom: 3px solid #F2F2F2 ;
+    border-top: inherit;
+}
+
+.Lien:hover {
+    border-bottom: 3px solid #0065FC;
+color: #0065FC;
+    }
+    
+.Lien2 {
+
+border-bottom: 3px solid #F2F2F2 ;
+    border-top: inherit;
 }
 
 .Lien2:hover {
-    border-top: 3px solid #0065FC;
-    color: #0065FC;
+    border-bottom: 3px solid #0065FC;
+color: #0065FC;
     }
+
 
 
           .row2 {
@@ -551,6 +606,24 @@ grid-template-areas: "logo . button" "navbar-start navbar-end navbar-end";
 background-color: #F6FAFF;
 
 }
+
+.box:hover {
+
+    transform: scale(1.02);
+transition-duration: 0.2s;
+}
+     .Populaire__header{  
+display: grid;
+grid-template-columns: 1fr 1.25rem;
+margin-bottom: 0rem;
+ }
+
+
+i.fas.fa-chart-line {
+
+    padding-right: 2rem;
+    color: black;
+} 
 }
 
 
@@ -624,8 +697,14 @@ margin: 10px;
 display: flex;
 flex-direction: column;
 align-items: center;
+margin-bottom: 40px;
     }
 
+.box:hover {
+
+    transform: scale(1.02);
+transition-duration: 0.2s;
+}
 
 .box {
     border-radius: 25px 25px 25px 25px;
@@ -650,7 +729,7 @@ grid-template-rows: 1fr 55px;
       grid-column: 1/-1;
       
       margin-bottom: 10px;
-       margin-inline-end: auto;
+       
 margin-left: 26px;
     }
 
@@ -664,6 +743,7 @@ height: 144px;
     display: flex;
     margin-top: 2rem;
     flex-wrap: wrap;
+    padding-left: 10px;
 }
 
 .searchFiltersTitle {
@@ -742,23 +822,11 @@ overflow: auto;
     padding-left: 40%;
 }
 
-.header {
-    grid-template-columns: auto 1fr auto;
 
 
-display: grid;
-align-items: center;
-max-width: 1440px;
-margin: auto;
 
 
-}
 
-.header img {
-
-    grid-area: logo-start;
-padding-left: 3rem;
-}
 .headerNav {
 
     order: 2;
@@ -785,21 +853,27 @@ font-family: 'Raleway', sans-serif;
     object-fit: cover;
 }
 
-.Inscription {
-   
-    display: flex;
-    align-items: center;
-    padding: 2rem;
-    font-weight: 600;
-    text-decoration: none;
-    font-size: 17px;
-    font-family: 'Raleway', sans-serif;
-    color: #0065FC;
 
-}
-.Lien2:hover {
-    border-top: 3px solid #0065FC;
+.Lien {
     color: #0065FC;
+    border-bottom: 3px solid #F2F2F2 ;
+    border-top: inherit;
+}
+
+.Lien:hover {
+    border-bottom: 3px solid #0065FC;
+color: #0065FC;
+    }
+    
+.Lien2 {
+
+border-bottom: 3px solid #F2F2F2 ;
+    border-top: inherit;
+}
+
+.Lien2:hover {
+    border-bottom: 3px solid #0065FC;
+color: #0065FC;
     }
 
     .row2 {
@@ -819,15 +893,47 @@ align-items: inherit;
 background-color: #F6FAFF;
 
 }
+
+     .Populaire__header{  
+display: grid;
+grid-template-columns: 1fr 1.25rem;
+margin-bottom: 0rem;
+ }
+
+i.fas.fa-chart-line {
+
+    padding-right: 2rem;
+    color: black;
+}
+.Inscription {
+
+padding-right: 5vw;
+    grid-area: 1 / 2 / 2 / 3;
+    justify-self: end;
+}
+
+.header {
+
+
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+display: grid;
+align-items: center;
+justify-content: center;
 }
 
 
 
+   }
 
 
 
 
-@media (min-width: 710px) and (max-width: 992px){
+
+
+
+@media (min-width: 710px) and (max-width: 992px){ 
+
 
 
     .col-8 {
@@ -862,7 +968,6 @@ align-items: center;
 margin-bottom: 20px;
 
 }
-
 
 .Lien2:hover {
     border-top: 3px solid #0065FC;
@@ -905,9 +1010,15 @@ margin: 10px;
 grid-template-columns: repeat(2, 1fr);
 grid-template-rows: auto 14rem 14rem 14rem auto;
 display: grid;
+margin-bottom: 40px;
 }
 
     
+.box:hover {
+
+    transform: scale(1.02);
+transition-duration: 0.2s;
+}
 
    
 .box h3 {
@@ -977,7 +1088,7 @@ margin: -2px
 
         .searchbar {
 
-        padding-left: 10px;
+      
         display: inline-flex;
 max-width: 100%;
     }
@@ -1028,6 +1139,36 @@ padding-top: inherit;
 background-color: #F6FAFF;
 
 }
+
+     .Populaire__header{  
+display: grid;
+grid-template-columns: 1fr 1.25rem;
+margin-bottom: 0rem;
+ }
+i.fas.fa-chart-line {
+
+    padding-right: 4rem;
+    color: black;
+} 
+
+.Inscription {
+
+padding-right: 5vw;
+    grid-area: 1 / 2 / 2 / 3;
+    justify-self: end;
+}
+
+.header {
+
+
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+display: grid;
+align-items: center;
+justify-content: center;
+
+}
+
 }
 
 
@@ -1049,6 +1190,7 @@ background-color: #F6FAFF;
         
     }
      
+
      .populaire {
     display: flex;
     align-items: center;
@@ -1090,6 +1232,7 @@ grid-template-columns: repeat(2, 1fr);
 grid-auto-rows: 100px;
 grid-template-rows: auto 14rem 14rem 14rem 2rem;
 column-gap: 2rem;
+margin-bottom: 40px;
     
 
     }
@@ -1111,17 +1254,13 @@ text-decoration: none;
     }
     
 
-    .ConteneurFiltres{
-    display: flex;
-    margin-top: 2rem;
-    flex-wrap: wrap;
-}
 
 
 .ConteneurFiltres{
     display: flex;
     margin-top: 2rem;
     flex-wrap: wrap;
+    padding-left: 10px;
 }
 
 .searchFiltersTitle {
@@ -1170,7 +1309,7 @@ margin: -2px
 
     .searchbar {
 
-        padding-left: 10px;
+        
         display: inline-flex;
 max-width: 100%;
     }
@@ -1230,6 +1369,28 @@ i.fas.fa-search {
 background-color: #F6FAFF;
 
 }
+.box:hover {
+
+    transform: scale(1.02);
+transition-duration: 0.2s;
+}
+
+     .Populaire__header{  
+display: grid;
+grid-template-columns: 1fr 1.25rem;
+margin-bottom: 0rem;
+ }
+i.fas.fa-chart-line {
+
+    padding-right: 2rem;
+    color: black;
+} 
+.header {
+  display: grid;
+grid-template-columns: 1fr repeat(3, 160px);
+align-items: center;
+justify-content: center;
+}
 
 }
 
@@ -1273,6 +1434,7 @@ background-color: #F6FAFF;
         grid-auto-rows: 100px;
         grid-template-rows: auto 14rem 2rem 2rem 2rem 14rem;
           line-height: 2.15;
+          margin-bottom: 40px;
     }
 
     .box1 {
@@ -1388,7 +1550,7 @@ text-decoration: none;
 
     .searchbar {
 
-        padding-left: 10px;
+        
         display: inline-flex;
 max-width: 100%;
     }
@@ -1421,6 +1583,7 @@ padding-left: 10px;
     display: flex;
     margin-top: 2rem;
     flex-wrap: wrap;
+    padding-left: 10px;
 }
 
 .searchFiltersTitle {
@@ -1512,8 +1675,39 @@ i.fas.fa-search {
 
     padding-left: 40px;
 }
+     .Populaire__header{  
+display: grid;
+grid-template-columns: 1fr 1.25rem;
+margin-bottom: 0rem;
+ }
 
+
+.Populaire__header-icon{   
+display: flex;
+align-items: center;
+justify-content: center;
+cursor: pointer;
+color: black;
+font-size: 1.25rem;
+
+list-style: none;
+
+            }
+
+i.fas.fa-chart-line {
+
+    padding-right: 2rem;
+    color: black;
+} 
+
+.header {
+  display: grid;
+grid-template-columns: 1fr repeat(3, 160px);
+align-items: center;
+justify-content: center;
 }
+
+        }
 
 
 
