--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-html {
-  
-    
-}
-
-
 body {
 
     font-family: "Raleway", "Sans serif";
@@ -18,13 +12,6 @@ body {
 
 
 
-.main {
-
-    max-width: 1440px;
-margin: auto;
-
-box-sizing: border-box;
-}
 
 
 
@@ -35,18 +22,10 @@ box-sizing: border-box;
 
 
 
-.header {
-    display: grid;
-    align-items: center;
-    max-width: 1440px;
-    margin: auto;
-    grid-template-columns: auto 1fr auto auto;
-grid-template-areas: "logo . navbar button";
-}
 
 .headerImg {
-    grid-area: logo;
-    padding: 0 2rem;
+   
+    padding: 0 3rem;
     height: 2.813rem;
     border-style: none;  }
 
@@ -82,21 +61,16 @@ color: black;
     text-decoration: none;
 }
 
-.Lien2[data-active="true"] {
+.Lien2[data-active="true"]{
     color: #0065FC;  
     border-top: 3px solid #0065FC;
   text-decoration: none;
 
 }
 
-.Lien2[data-active="true"]a {
 
-  
-}
 .Inscription{
-   display: flex;
-align-items: center;
-grid-area: button;
+
 padding: 2rem;
 font-weight: 600;
 text-decoration: none;
@@ -272,7 +246,7 @@ font-size: 1.1em;
     position: relative;
     right: 1px;
 }
-}
+
 
 
 #filtre1 {
@@ -482,42 +456,6 @@ margin-right: 5px;
 
 
 
-.filtre {
-
-    margin-top: 20px;
-    border-radius: 0 25px 25px 0;
-    padding-right: 80px
-    outline:none;
-text-decoration: 0;
-text-underline-position: none;
-
-}
-
-.filtre ul {
-
-
-        display: flex;
-    justify-content: space-around;
-    padding-left: 30px;
-    padding: 50px;
-    align-items: revert;
-    align-content: flex-end;
-    margin-right: 25%;
-    text-decoration: 0;
-
-    text-underline-position: none;
-}
-
-
-.filtre ul li {
-text-underline-position: none;
-
-    border: solid 2px;
-border-radius: 50px;
-padding: 5px;
-text-decoration: 0;
-}
-
 
 .filtre input[type="text" ] {
 
@@ -615,15 +553,14 @@ border-bottom: none;
 
 
 }
-
-
 .title2 {
-    font-size: 1.3em;
+        font-size: 1.3em;
     font-weight: bold;
     font-family: 'Raleway', sans-serif;
 padding-left: 30px;
-
 }
+
+
 
 .title3 {
  font-weight: bold;
@@ -732,7 +669,6 @@ padding-left: 14px;
 /* Populaire */
 
 
-
  .color-grey-populaire {
  background-color: #F2F2F2;
 height: 94%;
@@ -740,6 +676,15 @@ border-radius: 25px 25px 25px 25px;
 padding-bottom: 45px;
 
  }
+
+   .Populaire__header-title{
+    font-size: 1.3em;
+    font-weight: bold;
+    font-family: 'Raleway', sans-serif;
+padding-left: 30px;
+
+}
+
 
 
 .populaire {
@@ -752,7 +697,6 @@ padding-left: 10px;
 }
 
 
-   
 
 
 .image2 {
