--- a/Media.css
+++ b/Media.css
@@ -1,636 +1,10 @@
 /* Media */
 
-@media (max-width: 411px) 
 
 
-{   
 
 
-    .col-8 {
-        flex: 0 0 auto;
-        order: 2;
-        width: 100%;
-      
-    }
-
-    .col-4 {
-        flex: 0 0 auto;
-        order: 1;
-        width: 100%;
-        
-    }
-
-    .col-3 {
-        flex: 0 0 auto;
-        width: 49%;
-    }
-
-    section {
-        margin-top: 30px;
-    }
-
-
-
-
-
-
-
-.image{
-
-display: flex;
-flex-direction: column;
-justify-content: space-around;
-align-items: center;
-margin-bottom: 20px;
-
-}
-
-
-
-.image1 {
-width: 90%;
-
-    background: white;
-border-radius: 25px 25px 25px 25px;
-margin: 10px;
-
-}
-
-.image1 img {
-
-    width: 100%;
-}
-
-
-.image2 img {
-
-    object-fit: cover;
-}
-    #conteneur
-    {
-        
-      margin: 4rem 0;
-display: flex;
-flex-direction: column;
-align-items: center;
-margin-bottom: 40px;
-    }
-
-
-.box {
-    border-radius: 25px 25px 25px 25px;
-    box-shadow: 1px 1px 12px #555;
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-    width: 90%;
-}
-    .box h3 {
-      margin: 1.2rem 1.5rem;
-font-family: "Raleway", "Sans serif";
-line-height: 1.15;   
-margin: 1.2rem 1.5rem;  }
-   
-    .box a {
-color: inherit;
-text-decoration: none;
-grid-template-rows: 1fr 55px;
-    }
-   .ActivityTitle {   
-      grid-column: 1/-1;
-      
-      margin-bottom: 10px;
-      
-margin-left: 26px;
-    }
-
- .box img {       
-    border-radius: 25px 25px 0 0;
-width: 100%;
-object-fit: cover;
-height: 144px;
-       }
-       .ConteneurFiltres{
-    display: flex;
-    margin-top: 2rem;
-    flex-wrap: wrap;
-    padding-left: 10px;
-}
-
-.searchFiltersTitle {
-    margin: 0 2rem 1rem 0;
-    display: flex;
-    align-items: center;
-}
-.FiltreTitre{
-
-    display: flex;
-align-items: center;
-margin-right: 35px;
-margin-top: 4px;
-}
-
-.Filtres {
-    display: flex;
-    align-items: center;
-    margin-right: 2rem;
-    border: 2px solid #d9d9d9;
-    border-radius: 2rem;
-    margin-bottom: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-
-
-
-
-.Filtreicon {
-
-    background-color: #DEEBFF;
-border-radius: 100%;
-height: 3rem;
-width: 3rem;
-min-height: 2.5rem;
-min-width: 3.5rem;
-display: flex;
-align-items: center;
-justify-content: center;
-margin: -2px
-}
-
-.EcoTitre{
-    margin: 15PX;
-}
-
-
-
-#Boutonrecherche {
-
- display: none !important;
-}
- 
- i.fas.fa-search  {
-
-    font-size: 1.1em;
-color: #fff;
- }
-
-
-.searchbar {
-
-    display: flex;
-width: 100%;
-max-width: 100%;
-overflow: auto;
-
-     }
-
-
-
-.search input[type="search"] {
-    width: 100%;
-       }
-
-    .etoiles {
-
-   display: none !important;
-}
-
-.top img {
-
-    width: 97px;
-    height: 45px;
-    
-
-}
-
-
-  .nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
-    margin-left: -70px;
-    margin-top: 29px;
-}
-
-.top {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.Inscription {
-
-padding-right: 5vw;
-    grid-area: 1 / 2 / 2 / 3;
-    justify-self: end;
-}
-
-.header {
-
-
-grid-template-columns: repeat(2, 1fr);
-grid-template-rows: repeat(2, 1fr);
-display: grid;
-align-items: center;
-justify-content: center;
-
-}
-
-
-.headerNav {
-
-    display: flex;
-    align-items: center;
-    grid-area:navbar;
-
-}
-
-
-
-#entete {
-    margin: 30px 0px 0px 15px;
-    font-family: 'Raleway', sans-serif;
-}
-
-
-.Lien {
-    color: #0065FC;
-    border-bottom: 3px solid #F2F2F2 ;
-    border-top: inherit;
-}
-
-.Lien:hover {
-    border-bottom: 3px solid #0065FC;
-color: #0065FC;
-    }
-    
-.Lien2 {
-
-border-bottom: 3px solid #F2F2F2 ;
-    border-top: inherit;
-}
-
-.Lien2:hover {
-    border-bottom: 3px solid #0065FC;
-color: #0065FC;
-    }
-
-     .row2 {
-
-        height: 100%;
-      }  
-.container {
-    display: flex;
-    justify-content: space-between;
-     align-items: start;
-    padding-top: 15px;
-    flex-direction: column;
-    margin-top: 30px;
-    margin-left: -30px;
-   
-}
-
-.colone1 {
-    padding-right: 0;
-}
-
-.colone2 {
-    margin-right: 0;
-}
-
-.Filtres:hover 
-{
-
-background-color: #F6FAFF;
-
-}
-.box:hover {
-
-    transform: scale(1.02);
-transition-duration: 0.2s;
-}
-
-     .Populaire__header{  
-display: grid;
-grid-template-columns: 1fr 1.25rem;
-margin-bottom: 0rem;
- }
-
-
-i.fas.fa-chart-line {
-
-    padding-right: 2rem;
-    color: black;
-} 
-}
-
-
-    
-
-
-@media (min-width: 411px) and  (max-width: 599px)
-{   
-
-
-    .col-8 {
-        flex: 0 0 auto;
-        order: 2;
-        width: 100%;
-      
-    }
-
-    .col-4 {
-        flex: 0 0 auto;
-        order: 1;
-        width: 100%;
-        
-    }
-
-    .col-3 {
-        flex: 0 0 auto;
-        width: 49%;
-    }
-
-    section {
-        margin-top: 30px;
-    }
-
-
-
-
-
-
-
-.image{
-
-display: flex;
-flex-direction: column;
-justify-content: space-around;
-align-items: center;
-margin-bottom: 20px;
-
-}
-
-
-
-.image1 {
-width: 90%;
-
-    background: white;
-border-radius: 25px 25px 25px 25px;
-margin: 10px;
-
-}
-
-.image1 img {
-
-    width: 100%;
-}
-
-
-
-    #conteneur
-    {
-        
-      margin: 4rem 0;
-display: flex;
-flex-direction: column;
-align-items: center;
-margin-bottom: 40px;
-    }
-
-
-.box {
-    border-radius: 25px 25px 25px 25px;
-    box-shadow: 1px 1px 12px #555;
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-    width: 90%;
-}
-    .box h3 {
-      margin: 1.2rem 1.5rem;
-font-family: "Raleway", "Sans serif";
-line-height: 1.15;   
-margin: 1.2rem 1.5rem;  }
-   
-    .box a {
-color: inherit;
-text-decoration: none;
-grid-template-rows: 1fr 55px;
-    }
-   .ActivityTitle {   
-      grid-column: 1/-1;
-      
-      margin-bottom: 10px;
-       
-margin-left: 26px;
-    }
-
- .box img {       
-    border-radius: 25px 25px 0 0;
-width: 100%;
-object-fit: cover;
-height: 144px;
-       }
-       .ConteneurFiltres{
-    display: flex;
-    margin-top: 2rem;
-    flex-wrap: wrap;
-    padding-left: 10px;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.searchFiltersTitle {
-    margin: 0 2rem 1rem 0;
-    display: flex;
-    align-items: center;
-}
-.FiltreTitre{
-
-    display: flex;
-align-items: center;
-margin-right: 35px;
-margin-top: 4px;
-}
-
-.Filtres {
-    display: flex;
-    align-items: center;
-    margin-right: 2rem;
-    border: 2px solid #d9d9d9;
-    border-radius: 2rem;
-    margin-bottom: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.Filtreicon {
-
-    background-color: #DEEBFF;
-border-radius: 100%;
-height: 3rem;
-width: 3rem;
-min-height: 2.5rem;
-min-width: 3.5rem;
-display: flex;
-align-items: center;
-justify-content: center;
-margin: -2px
-}
-
-.EcoTitre{
-    margin: 15PX;
-}
-
-
-
-#Boutonrecherche {
-
- display: none !important;
-}
- 
- i.fas.fa-search  {
-
-    font-size: 1.1em;
-color: #fff;
- }
-
-
-.searchbar {
-
-    display: flex;
-width: 100%;
-max-width: 100%;
-overflow: auto;
-
-     }
-
-
-
-.search input[type="search"] {
-    width: 100%;
-       }
-
-    .etoiles {
-
-   display: none !important;
-}
-
-.top img {
-
-    width: 97px;
-    height: 45px;
-    
-
-}
-
-
-  .nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
-    margin-left: -70px;
-    margin-top: 29px;
-}
-
-.top {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-
-.Inscription {
-
-padding-right: 5vw;
-    grid-area: 1 / 2 / 2 / 3;
-    justify-self: end;
-}
-
-.header {
-
-
-grid-template-columns: repeat(2, 1fr);
-grid-template-rows: repeat(2, 1fr);
-display: grid;
-align-items: center;
-justify-content: center;
-
-}
-
-
-.Lien {
-    color: #0065FC;
-    border-bottom: 3px solid #F2F2F2 ;
-    border-top: inherit;
-}
-
-.Lien:hover {
-    border-bottom: 3px solid #0065FC;
-color: #0065FC;
-    }
-    
-.Lien2 {
-
-border-bottom: 3px solid #F2F2F2 ;
-    border-top: inherit;
-}
-
-.Lien2:hover {
-    border-bottom: 3px solid #0065FC;
-color: #0065FC;
-    }
-
-
-
-          .row2 {
-
-         height: 100%;
-      }  
-.container {
-    display: flex;
-    justify-content: space-between;
-     align-items: start;
-    padding-top: 15px;
-    flex-direction: column;
-    margin-top: 30px;
-    margin-left: -30px;
-}
-
-
-.Filtres:hover 
-{
-
-background-color: #F6FAFF;
-
-}
-
-.box:hover {
-
-    transform: scale(1.02);
-transition-duration: 0.2s;
-}
-     .Populaire__header{  
-display: grid;
-grid-template-columns: 1fr 1.25rem;
-margin-bottom: 0rem;
- }
-
-
-i.fas.fa-chart-line {
-
-    padding-right: 2rem;
-    color: black;
-} 
-}
-
-
-
-
-
-@media (min-width: 600px) and (max-width: 709px){
+@media (max-width: 767.98px){
 
 
     .col-8 {
@@ -900,11 +274,29 @@ grid-template-columns: 1fr 1.25rem;
 margin-bottom: 0rem;
  }
 
+.Populaire__header-icon{   
+display: flex;
+align-items: center;
+justify-content: center;
+cursor: pointer;
+color: black;
+font-size: 1.25rem;
+
+list-style: none;
+
+            }
+
+.Populaire__header-title {
+    font-size: 1.3em;
+    font-weight: bold;
+    font-family: 'Raleway', sans-serif;
+    padding-left: 40px;
+}
 i.fas.fa-chart-line {
 
-    padding-right: 2rem;
+    padding-right: 4rem;
     color: black;
-}
+} 
 .Inscription {
 
 padding-right: 5vw;
@@ -932,7 +324,7 @@ justify-content: center;
 
 
 
-@media (min-width: 710px) and (max-width: 992px){ 
+@media (min-width: 768px){ 
 
 
 
@@ -993,7 +385,7 @@ margin: 10px;
         
         background: white;
         padding: 5px;
-
+width: 95%;
         border-radius: 25px 25px 25px 25px;
         margin-bottom: 23px;
 
@@ -1145,12 +537,31 @@ display: grid;
 grid-template-columns: 1fr 1.25rem;
 margin-bottom: 0rem;
  }
+
+ .Populaire__header-title {
+    font-size: 1.3em;
+    font-weight: bold;
+    font-family: 'Raleway', sans-serif;
+    padding-left: 40px;
+}
+.Populaire__header-icon{   
+display: flex;
+align-items: center;
+justify-content: center;
+cursor: pointer;
+color: black;
+font-size: 1.25rem;
+
+list-style: none;
+
+            }
+
+
 i.fas.fa-chart-line {
 
     padding-right: 4rem;
     color: black;
 } 
-
 .Inscription {
 
 padding-right: 5vw;
@@ -1158,6 +569,10 @@ padding-right: 5vw;
     justify-self: end;
 }
 
+.populaire {
+    display: flex;
+    flex-direction: column;
+}
 .header {
 
 
@@ -1171,234 +586,11 @@ justify-content: center;
 
 }
 
+/* Section */
 
+ 
 
-@media  (min-width: 993px) and (max-width: 1399px)  {
-
-   .col-8 {
-        flex: 0 0 auto;
-        order: 2;
-        width: 100%;
-      
-    }
-
-    .col-4 {
-        flex: 0 0 auto;
-        order: 1;
-        width: 100%;
-        margin: auto;
-        
-    }
-     
-
-     .populaire {
-    display: flex;
-    align-items: center;
-flex-direction: inherit;
-padding-left: inherit;
-padding-right: inherit;
-}
-
-.image1 img {
-    height: 8rem;
-    object-fit: cover;
-    width: 100%;
-    height: auto;
-    border-radius: 1rem 1rem 0 0;
-}
-
-  .image {
-
-        margin-bottom: 20px;
-    }
-
-
-
-   .image1 {
-
-    width: 100%;
-    width: 100%;
-    margin: 10px;
-   }
-  .image2 {
-margin: 10px;
-  }
-
-
-    #conteneur
-    {
-       display: grid;
-grid-template-columns: repeat(2, 1fr);
-grid-auto-rows: 100px;
-grid-template-rows: auto 14rem 14rem 14rem 2rem;
-column-gap: 2rem;
-margin-bottom: 40px;
-    
-
-    }
-   
-.box h3 {
-      margin: 1.2rem 1.5rem;
-font-family: "Raleway", "Sans serif";
-line-height: 1.15;     }
-   
-    .box a {
-color: inherit;
-text-decoration: none;
-    }
-
-      .ActivityTitle {   
-      grid-column: 1/-1;
-      padding-left: 20px;
-      margin-bottom: 10px;
-    }
-    
-
-
-
-.ConteneurFiltres{
-    display: flex;
-    margin-top: 2rem;
-    flex-wrap: wrap;
-    padding-left: 10px;
-}
-
-.searchFiltersTitle {
-    margin: 0 2rem 1rem 0;
-    display: flex;
-    align-items: center;
-}
-.FiltreTitre{
-
-    display: flex;
-align-items: center;
-margin-right: 35px;
-margin-top: 4px;
-}
-
-.Filtres {
-    display: flex;
-    align-items: center;
-    margin-right: 2rem;
-    border: 2px solid #d9d9d9;
-    border-radius: 2rem;
-    margin-bottom: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.Filtreicon {
-
-    background-color: #DEEBFF;
-border-radius: 100%;
-height: 3rem;
-width: 3rem;
-min-height: 2.5rem;
-min-width: 3.5rem;
-display: flex;
-align-items: center;
-justify-content: center;
-margin: -2px
-}
-
-.EcoTitre{
-    margin: 15PX;
-}
-
-
-
-    .searchbar {
-
-        
-        display: inline-flex;
-max-width: 100%;
-    }
-    .Boutonrecherche {
-
-    position: relative;
-left: -5px;
-font-size: 1.1em;
-border-radius: 0 15px 15px 0;
-height: 50px;
-width: 130px;
-background-color: #0065FC;
-color: #fff;
-border: none;
-}
-
-i.fas.fa-search {
-
-    display: none !important;
-}
-
-.etoiles {
-
-    padding-left: 40%;
-}
-
-.Lien2:hover {
-    border-top: 3px solid #0065FC;
-    color: #0065FC;
-    }
-
-    .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    padding-top: 15px;
-}
-
-
-    .row2 {
-    background-color: #F2F2F2;
-    height: 100%;
-}
-
-.colone2 {
-    margin-right: inherit;
-    padding-right: 65px;
-}
-
-.colone1 {
-    padding-right: 75px;
-}
-
-.Filtres:hover 
-{
-
-background-color: #F6FAFF;
-
-}
-.box:hover {
-
-    transform: scale(1.02);
-transition-duration: 0.2s;
-}
-
-     .Populaire__header{  
-display: grid;
-grid-template-columns: 1fr 1.25rem;
-margin-bottom: 0rem;
- }
-i.fas.fa-chart-line {
-
-    padding-right: 2rem;
-    color: black;
-} 
-.header {
-  display: grid;
-grid-template-columns: 1fr repeat(3, 160px);
-align-items: center;
-justify-content: center;
-}
-
-}
-
-
-
-
-
-@media (min-width: 1400px)   {
+@media (min-width: 1200px)   {
     .col-8 {
         flex: 0 0 auto;
         width: 66.6666666667%;
@@ -1707,6 +899,12 @@ align-items: center;
 justify-content: center;
 }
 
+.Populaire__header-title {
+    font-size: 1.3em;
+    font-weight: bold;
+    font-family: 'Raleway', sans-serif;
+    padding-left: 40px;
+}
         }
 
 
