--- a/style.css
+++ b/style.css
@@ -693,7 +693,7 @@ flex-direction: column;
 align-items: center;
 padding-right: 10px;
 padding-left: 10px;
-
+padding-bottom: 1.5rem;
 }
 
 
@@ -977,62 +977,7 @@ transition-duration: 0.2s;
 
 /* Footer */
 
-.row2 {
- background-color: #F2F2F2;
-height: 200px;
-}
 
-
-.container {
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 15px;
-}
-
-
-
-
-.title6 {
-    font-size: 1.1em;
-    font-weight: bold;
-    font-family: 'Raleway', sans-serif;
-margin-left: 65px;
-
-   }
-
-
-.linkfooter li a {
-  text-decoration-line: none;
-  color: black;
-  
-    font-family: 'Raleway', sans-serif;
-
-}
-
-
-.linkfooter {
-
-    line-height: 2.1em;
-    padding-left: 65px;
-    list-style-type: none;
-}
-
-.linkfooter li a:hover {
-    text-decoration-line: underline;
-}
-
-.colone1 {
-
-padding-right: 20px;
-}
-
-.colone2 {
-
-
-    margin-right: 420px;
-}
 
 
 /* Footer */
@@ -1045,9 +990,9 @@ height: 200px;
 
 .container {
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+grid-template-columns: repeat(3, 1fr);
+
     padding-top: 15px;
 }
 
@@ -1082,12 +1027,6 @@ margin-left: 65px;
 .colone1 {
 
 padding-right: 20px;
-}
-
-.colone2 {
-
-
-    margin-right: 420px;
 }
 
 
