--- a/Media.css
+++ b/Media.css
@@ -630,6 +630,7 @@ justify-content: center;
         grid-template-rows: auto 14rem 2rem 2rem 2rem 14rem;
           line-height: 2.15;
           margin-bottom: 40px;
+          row-gap: inherit;
     }
 
     .box1 {
