--- a/Media.css
+++ b/Media.css
@@ -111,7 +111,7 @@ margin-left: 26px;
     border-radius: 25px 25px 0 0;
 width: 100%;
 object-fit: cover;
-height: 144px;
+height: 100%;
        }
        .ConteneurFiltres{
     display: flex;
@@ -730,6 +730,12 @@ line-height: 1.15;     }
 color: inherit;
 text-decoration: none;
     }
+
+  .box img {       
+    border-radius: 25px 25px 0 0;
+width: 100%;
+object-fit: cover;
+height: 100%;}
 
     .ActivityTitle {   
       grid-column: 1/-1;
